syntax = "proto3";

package warehouse;

option go_package = "warehouse-service/warehousepb";

// Messages
message AddInventoryRequest {
  string item_id = 1;
  string item_name = 2;
  int32 quantity = 3;
}

message AddInventoryResponse {
  string status = 1;
}

message GetInventoryRequest {
  string item_id = 1;
}

message GetInventoryResponse {
  string item_name = 1;
  int32 quantity = 2;
}

// Service
service WarehouseService {
  rpc AddInventory(AddInventoryRequest) returns (AddInventoryResponse);
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);
}
